# AIWriteX

./: .gitignore  README.md  介绍.md
.kilo/plans/: 1774954714269-019d3ee2-1665-7279-8937-033ac703dc1f.md
src/ai_write_x/: crew_main.py
src/content_hub/: __init__.py
tests/content_hub/: test_api_structure.py  test_article_hub_project.py  test_repositories.py  test_services.py  test_workflow.py
文章中转站/: README.md  main.py  pyproject.toml  requirements.txt
文章中转站/src/content_hub/application/jobs/: job_service.py
文章中转站/src/content_hub/application/publishers/: base.py  wechat_publisher.py
文章中转站/src/content_hub/application/services/: config_service.py  content_service.py  publish_service.py  template_service.py
文章中转站/src/content_hub/bootstrap/: __init__.py  container.py
文章中转站/src/content_hub/domain/: __init__.py
文章中转站/src/content_hub/domain/content/: entities.py
文章中转站/src/content_hub/domain/publish/: __init__.py
文章中转站/src/content_hub/domain/template/: entities.py
文章中转站/src/content_hub/domain/workflow/: __init__.py
文章中转站/src/content_hub/infrastructure/: __init__.py
文章中转站/src/content_hub/infrastructure/storage/: ingestion_repository.py  template_repository.py
文章中转站/src/content_hub/interfaces/api/: __init__.py  main.py
文章中转站/src/content_hub/interfaces/compat/: legacy_web_app.py
文章中转站/src/content_hub/runtime/engine/: workflow_engine.py
文章中转站/src/content_hub/runtime/nodes/: creative.py  rewrite.py
文章中转站/tests/content_hub/: test_article_hub_project.py  test_repositories.py  test_services.py  test_settings.py  test_workflow.py
(+47 files in other folders)
